fixed scrawl brawl button outlines in dark mode

--- a/src/WebFrontEnd/ClientApp/src/app/shared/components/scrawlbutton/scrawlbutton.component.css
+++ b/src/WebFrontEnd/ClientApp/src/app/shared/components/scrawlbutton/scrawlbutton.component.css
@@ -34,7 +34,7 @@ a:hover .scrawlbutton-label {
 }
 
 .scrawlbutton-outline {
-    border: 2px solid var(--black-secondary);
+    border: 2px solid var(--scrawlbutton-outline);
     border-radius: 4px;
     height: 40px;
     position: relative;
@@ -46,7 +46,7 @@ a:hover .scrawlbutton-label {
 }
 
 a:hover .scrawlbutton-outline {
-    border: 2px solid var(--black-tertiary);
+    border: 2px solid var(--scrawlbutton-outline-hover);
     transform: rotate(0deg);
 }
 
@@ -98,7 +98,7 @@ a:hover .red-scrawlbutton-base {
     top: 0px;
 }
 
-.yellow-scrawlbutton-base{
+.yellow-scrawlbutton-base {
     width: 100%;
     height: 40px;
     background-color: var(--yellow-secondary);
@@ -107,7 +107,7 @@ a:hover .red-scrawlbutton-base {
     left: 6px;
     top: 3px;
     transition: all .3s ease;
-}   
+}
 
 a:hover .yellow-scrawlbutton-base {
     left: 0px;
